infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          # - path: /posts
          #   backend:
          #     serviceName: query-srv
          #     servicePort: 4002
          # - path: /posts/?(.*)/comments
          #   backend:
          #     serviceName: comments-srv
          #     servicePort: 4001
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-srv
          #     servicePort: 3000
